# datemanager_gui

./: CMakeCache.txt  CMakeLists.txt  readme.md
include/: gui.h  task.h  user.h
src/: CMakeLists.txt  gui.cpp  main.cpp  task.cpp  user.cpp
